Fix image source path in index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<img src="/13.jpg"/>
+<img src="13.jpg"/>
 <button id="share">SHARE</button>
 
 <script>
@@ -6,7 +6,7 @@ const input = document.getElementById("files");
 const output = document.getElementById("output");
 
 document.getElementById("share").addEventListener("click", async () => {
-  const blob = await fetch('/13.jpg').then(res=>res.blob());
+  const blob = await fetch('13.jpg').then(res=>res.blob());
   try {
     await navigator.share({
       files: [blob],
