--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@ const output = document.getElementById("output");
 document.getElementById("share").addEventListener("click", async () => {
   const blob = await fetch('13.jpg').then(res=>res.blob());
   const file = new File([blob], 'image.jpg', { type: blob.type })
+
+  const blob2 = await fetch('16.jpg').then(res=>res.blob());
+  const file2 = new File([blob], 'image.jpg', { type: blob.type })
+  
   try {
     await navigator.share({
-      files: [file],
+      files: [file, file2],
       title: "Images",
       text: "Beautiful image",
     });
