--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ document.getElementById("share").addEventListener("click", async () => {
 
   const blob2 = await fetch('16.jpg').then(res=>res.blob());
   const file2 = new File([blob2], 'image2.jpg', { type: blob2.type })
+
+  await navigator.clipboard.writeText('Some Text To Use As Caption')
   
   try {
     await navigator.share({
